--- a/src/component/MessageFlow/box.module.css
+++ b/src/component/MessageFlow/box.module.css
@@ -1,7 +1,18 @@
 .outer {
     padding: 0 19px;
-    height: 200px;
-    background-color: azure;
+    height: 100%;
+    min-height: 200px;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
+    position: relative;
+    background-color: #eee;
+}
+.inner {
+    padding-top: 16px;
+}
+.emptyBox {
+    text-align: center;
+    margin-top: 130px;
+    color: #cccccc;
+    font-size: 13px;
 }
